fixed overflow issue on tech component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -178,3 +178,14 @@ html body {
   src: local("BhostraLalaRegular"),
     url(./assets/fonts/BhostraLalaRegular.otf) format("opentype");
 }
+
+#techtsparticles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 0;
+  margin: 0;
+  z-index: 0; /* if you use -1 you have to set to `"window"` the interactivity.detectsOn property */
+}
